tests/ui/g-typelist-local-missing-step.stderr
error[E0271]: type mismatch resolving `<StepCons<LocalSend<Role<1>, Message<LabelMarker<7>, u16>>, StepNil> as StepConcat<StepNil>>::Output == StepNil`
 --> tests/ui/g-typelist-local-missing-step.rs:9:50
  |
9 | const CLIENT: RoleProgram<'static, 0, StepNil> = project(&PROGRAM);
  |                                                  ^^^^^^^^^^^^^^^^^ expected `StepNil`, found `StepCons<LocalSend<Role<1>, ...>, ...>`
  |
  = note: expected struct `StepNil`
             found struct `StepCons<LocalSend<Role<1>, hibana::global::Message<hibana::global::LabelMarker<7>, u16>>, StepNil>`
